Scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 :root {
-    --primary: #17161d;
+    --primary: #17161e;
     --text-color: #F1F1F1;
 }
 
